add --enable-preview flag to java runtime options